# The_Ray_Tracing_Challenge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/trtc/: allocator.h  array.h  c_allocator.h  canvas.h  color.h  gui_window.h  light.h  material.h  matrix.h  point.h  putting_it_together_ch01.h  putting_it_together_ch02.h  putting_it_together_ch04.h  putting_it_together_ch05.h  putting_it_together_ch06.h  ray.h  string_builder.h  temp_allocator.h  tuple.h  util.h  vector.h  world.h
include/trtc/chapter_01/: putting_it_together.h
lib/glad/: gl.h
source/: allocator.cpp  c_allocator.cpp  canvas.cpp  color.cpp  gui_window.cpp  light.cpp  main.cpp  material.cpp  matrix.cpp  point.cpp  putting_it_together_ch01.cpp  putting_it_together_ch02.cpp  putting_it_together_ch04.cpp  putting_it_together_ch05.cpp  putting_it_together_ch06.cpp  ray.cpp  string_builder.cpp  temp_allocator.cpp  tuple.cpp  util.cpp  vector.cpp  world.cpp
source/chapter_01/: putting_it_together.cpp
tests/: CH01.cpp  CH02.cpp  CH03.cpp  CH04.cpp  CH05.cpp  CH06.cpp  CH07.cpp  common.h  test_main.cpp
